--- a/style.css
+++ b/style.css
@@ -58,7 +58,19 @@ body {
     border-radius: 50%;
     position: absolute;
     bottom: 20px;
-    right: 20px;            
+    right: 20px;
+
+    overflow: hidden;       /* allows image to be clipped to circle */
+    display: flex;          /* centers the image */
+    justify-content: center;
+    align-items: center;
+}
+.circle-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;      /* makes the image fill the circle properly */
+}
+
 }
 .maroon-rectangle-vertical {
     width: 500px;               /* width of vertical rectangle */
