--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@ nav ul {
     justify-content: space-around;
     padding: 15px 0;
     background-color: #4a0e0e;
+    
 }
 
-/* GLOBAL IMAGE RULE */
+
 img {
     max-width: 100%;
     height: auto;
@@ -95,16 +96,7 @@ body {
 }
 
 /* ABOUT PAGE TITLE RECTANGLE */
-.about-rectangle {
-    width: 200px;
-    height: 50px;
-    background-color: #4a0e0e;
-    border-radius: 10px;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 
 /* ABOUT PAGE FLEXBOX */
 .about-flex {
@@ -113,12 +105,13 @@ body {
     align-items: center;
     padding: 20px;
     gap: 20px;
+    font: size 22px; ;
 }
 
 .about-text {
     flex: 1;
     color: white;
-    font-size: 18px;
+    font-size: 22px;
 }
 
 .about-img-container {
@@ -149,11 +142,7 @@ body {
     gap: 40px;
 }
 
-.contact-icons {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-}
+
 
 .contact-icon {
     width: 60px;
@@ -184,3 +173,49 @@ body {
         width: 45px;
     }
 }
+
+.skills-rectangle1,
+.contact-rectangle,
+.about-rectangle {
+    width: 250px;              /* visible size */
+    height: 60px;
+    background-color: #4a0e0e;
+    border-radius: 8px;
+    display: flex;             /* centers the text */
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto;         /* centers the rectangle on the page */
+    color: #f5f0e6;            /* text color */
+    font-size: 22px;
+    font-weight: bold;
+}
+
+p {
+    font-size: 22px;
+    text-align: center;
+}
+
+h2, h1 {
+    text-align: center;
+    font-size: 22px;
+}
+
+.about-rectangle {
+    font-size: 22px
+}
+
+h1 {
+font-size: 30 px;
+
+}
+
+.rectangle-img {
+    width: 230px;        
+    height: 360px;       
+    border-radius: 8px;
+    object-fit: cover;  
+}
+
+h3 {
+    text-align: left;
+    padding-left: 20px; 
